# vulkan-3d-model-viewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: basic.frag  basic.vert  basic_frag.spv  basic_vert.spv  grid.frag  grid.vert  grid_frag.spv  grid_vert.spv  model.frag  model.vert  model_frag.spv  model_vert.spv
src/: main.cpp
src/assets/: ModelLoader.hpp
src/core/: Application.cpp  Application.hpp  VulkanDevice.cpp  VulkanDevice.hpp
src/rendering/: Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  ThumbnailRenderer.cpp  ThumbnailRenderer.hpp
src/scene/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp  Scene.cpp  Scene.hpp
src/ui/: UI.cpp  UI.hpp
